#1134: dAdd missing opening of module